[package]
name = "rust-mcp-mysql"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["transport-io","transport-sse-server","server", "macros"] }
tokio = { version = "1", features = ["full", "net"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"
tokio-util = "0.7.15"
axum = "0.8.4"
tracing = "0.1.41"
async-std = "1.13.1"
mysql = "*"
postgres = "0.19.10"